--- a/ProjetoPOO/web/webpages/cadastro-produto.xhtml
+++ b/ProjetoPOO/web/webpages/cadastro-produto.xhtml
@@ -14,7 +14,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
         <link rel="shortcut icon" type="image/png" href="../rs/img/logo-notype-v1.png"/>
         <style>
-
+            body {                
+            }
         </style>
     </h:head>
     <h:body>
@@ -22,157 +23,65 @@
             <div class="py-5 text-center">
                 <img class="d-block mx-auto mb-4" src="../rs/img/logo-notype-v1.png" alt="" width="100"/>
                 <h2>Cadastro de Usuário</h2>
-                <p class="lead">Cadastre-se colocando seus dados no formulário abaixo</p>
+                <p class="lead">Cadastre-se utilizando o formulário abaixo</p>
             </div>
 
             <div class="row">
-                
-                <div class="col-md-12">
-                    <h4 class="mb-3">Billing address</h4>
-                    <form class="needs-validation was-validated" novalidate="">
+
+                <div class="col-md-12">                    
+                    <h:form class="needs-validation was-validated">
                         <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <label for="firstName">First name</label>
-                                <input type="text" class="form-control" id="firstName" placeholder="" value="" required="true"/>
-                                <div class="invalid-feedback">
-                                    Valid first name is required.
-                                </div>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <label for="lastName">Last name</label>
-                                <input type="text" class="form-control" id="lastName" placeholder="" value="" required="true"/>
-                                <div class="invalid-feedback">
-                                    Valid last name is required.
-                                </div>
-                            </div>
+                            <div class="col-md-12 mb-3">
+                                <label for="firstName">Nome completo</label>
+                                <h:inputText  styleClass="form-control" id="firstName" required="true"/>
+                                <h:message styleClass="invalid-feedback" for="#firstName">
+                                    Nome completo obrigatório.
+                                </h:message>
+                            </div>                            
                         </div>
 
                         <div class="mb-3">
-                            <label for="username">Username</label>
+                            <label for="username">Nome de usuário</label>
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">@</span>
                                 </div>
-                                <input type="text" class="form-control" id="username" placeholder="Username" required="true"/>
-                                <div class="invalid-feedback" style="width: 100%;">
-                                    Your username is required.
-                                </div>
+                                <h:inputText class="form-control" id="username" required="true"/>
+                                <h:message styleClass="invalid-feedback" for="#username">
+                                    Nome completo obrigatório.
+                                </h:message>
                             </div>
                         </div>
 
                         <div class="mb-3">
-                            <label for="email">Email <span class="text-muted">(Optional)</span></label>
-                            <input type="email" class="form-control" id="email" placeholder="you@example.com"/>
-                            <div class="invalid-feedback">
-                                Please enter a valid email address for shipping updates.
-                            </div>
+                            <label for="email">Email</label>
+                            <h:inputText class="form-control" id="email" a:placeholder="you@example.com" required="true"/>
+                            <h:message styleClass="invalid-feedback" for="#email">
+                                Email obrigatório.
+                            </h:message>
                         </div>
 
                         <div class="mb-3">
-                            <label for="address">Address</label>
-                            <input type="text" class="form-control" id="address" placeholder="1234 Main St" required="true"/>
-                            <div class="invalid-feedback">
-                                Please enter your shipping address.
-                            </div>
+                            <label for="idade">Idade</label>
+                            <h:inputText class="form-control" id="idade" required="true"/>
+                            <h:message styleClass="invalid-feedback" for="#idade">
+                                Idade obrigatório.
+                            </h:message>
                         </div>
 
                         <div class="mb-3">
-                            <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-                            <input type="text" class="form-control" id="address2" placeholder="Apartment or suite"/>
+                            <label for="idade">Classificação</label>
+                            <h:selectOneMenu class="form-control" id="classificacao" required="true">
+                                <f:selectItem itemLabel="Escolha..."></f:selectItem>
+                                <f:selectItems></f:selectItems>
+                            </h:selectOneMenu>
+                            <h:message styleClass="invalid-feedback" for="#classificacao">
+                                Escolha uma classificação.
+                            </h:message>
                         </div>
-
-                        <div class="row">
-                            <div class="col-md-5 mb-3">
-                                <label for="country">Country</label>
-                                <select class="custom-select d-block w-100" id="country" required="true">
-                                    <option value="">Choose...</option>
-                                    <option>United States</option>
-                                </select>
-                                <div class="invalid-feedback">
-                                    Please select a valid country.
-                                </div>
-                            </div>
-                            <div class="col-md-4 mb-3">
-                                <label for="state">State</label>
-                                <select class="custom-select d-block w-100" id="state" required="true">
-                                    <option value="">Choose...</option>
-                                    <option>California</option>
-                                </select>
-                                <div class="invalid-feedback">
-                                    Please provide a valid state.
-                                </div>
-                            </div>
-                            <div class="col-md-3 mb-3">
-                                <label for="zip">Zip</label>
-                                <input type="text" class="form-control" id="zip" placeholder="" required="true"/>
-                                <div class="invalid-feedback">
-                                    Zip code required.
-                                </div>
-                            </div>
-                        </div>
-                        <hr class="mb-4"/>
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="same-address"/>
-                            <label class="custom-control-label" for="same-address">Shipping address is the same as my billing address</label>
-                        </div>
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="save-info"/>
-                            <label class="custom-control-label" for="save-info">Save this information for next time</label>
-                        </div>
-                        <hr class="mb-4"/>
-
-                            <h4 class="mb-3">Payment</h4>
-
-                            <div class="d-block my-3">
-                                <div class="custom-control custom-radio">
-                                    <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked="" required="true"/>
-                                    <label class="custom-control-label" for="credit">Credit card</label>
-                                </div>
-                                <div class="custom-control custom-radio">
-                                    <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required="true"/>
-                                    <label class="custom-control-label" for="debit">Debit card</label>
-                                </div>
-                                <div class="custom-control custom-radio">
-                                    <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required="true"/>
-                                    <label class="custom-control-label" for="paypal">Paypal</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 mb-3">
-                                    <label for="cc-name">Name on card</label>
-                                    <input type="text" class="form-control" id="cc-name" placeholder="" required="true"/>
-                                    <small class="text-muted">Full name as displayed on card</small>
-                                    <div class="invalid-feedback">
-                                        Name on card is required
-                                    </div>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <label for="cc-number">Credit card number</label>
-                                    <input type="text" class="form-control" id="cc-number" placeholder="" required="true"/>
-                                    <div class="invalid-feedback">
-                                        Credit card number is required
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-3 mb-3">
-                                    <label for="cc-expiration">Expiration</label>
-                                    <input type="text" class="form-control" id="cc-expiration" placeholder="" required="true"/>
-                                    <div class="invalid-feedback">
-                                        Expiration date required
-                                    </div>
-                                </div>
-                                <div class="col-md-3 mb-3">
-                                    <label for="cc-expiration">CVV</label>
-                                    <input type="text" class="form-control" id="cc-cvv" placeholder="" required="true"/>
-                                    <div class="invalid-feedback">
-                                        Security code required
-                                    </div>
-                                </div>
-                            </div>
-                            <hr class="mb-4"/>
-                            <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
-                    </form>
+                        <br/>
+                        <h:commandButton class="btn btn-success btn-lg btn-block" value="Cadastrar"></h:commandButton>
+                    </h:form>
                 </div>
             </div>
 
